--- a/index.html
+++ b/index.html
@@ -6,65 +6,7 @@
   <title>Jagged Grid Responsive</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Responsive text scaling */
-    .responsive-text {
-      font-size: clamp(1.5rem, 4vw, 5rem); /* General responsive text size */
-    }
-
-    /* SOFTWARE has slightly smaller text */
-    .software-text {
-      font-size: clamp(3rem, 6vw, 9rem); /* Slightly smaller than before */
-    }
-
-    /* AI has super massive text */
-    .ai-text {
-      font-size: clamp(5rem, 10vw, 15rem); /* Extremely large AI text */
-    }
-
-    /* Custom Tailwind Grid */
-    .grid-container {
-      display: grid;
-      grid-template-columns: 0.8fr 1fr 1.2fr; /* SOFTWARE is slightly less wide */
-      grid-template-rows: 75vh 50vh 45vh; /* EDUCATION is half its previous height */
-      gap: 8px; /* Adds spacing between elements */
-      width: 100vw;
-      height: 100vh;
-      padding: 16px;
-    }
-
-    /* Custom placement for jagged effect */
-    .software, .mathematics, .propulsion, .ai, .art, .media, .education {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-
-    /* PROPULSION & AI STACKED PROPERLY */
-    .propulsion-ai-container { 
-      grid-column: 3 / 4; 
-      grid-row: 1 / 2; 
-      display: flex; 
-      flex-direction: column; 
-      position: relative;
-      height: 100%; /* Ensure it fills space */
-    }
-    .propulsion, .ai {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-
-    /* Second Row (Half-Width & Taller) */
-    .art { grid-column: 1 / 3; grid-row: 2 / 3; height: 100%; }
-    .media { grid-column: 3 / 4; grid-row: 2 / 3; height: 100%; }
-
-    /* Third Row (Reduced Height) */
-    .education { grid-column: 1 / 4; grid-row: 3 / 4; }
-
-    /* Separate text from div so effects don't interfere */
+    /* Responsive text scaling for all sections */
     .title {
       position: absolute;
       color: white;
@@ -72,17 +14,86 @@
       text-transform: uppercase;
       text-align: center;
       pointer-events: none; /* Prevents interaction interference */
+      width: 90%; /* Prevents text from touching edges */
+      height: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: min(8vw, 8vh); /* Universal scaling */
+      line-height: 1; /* Ensures text doesn’t overflow */
+      white-space: nowrap; /* Prevents line breaks */
     }
 
-    /* Rotate SOFTWARE & MATHEMATICS (Bottom to Top) and Center it */
+    /* Adjust SOFTWARE & MATHEMATICS for rotation */
     .rotate-text {
       transform: rotate(-90deg);
       transform-origin: center;
-      white-space: nowrap; /* Prevents text from breaking */
-      left: 50%;
-      top: 50%;
-      position: absolute;
-      transform: translate(-50%, -50%) rotate(-90deg);
+      font-size: min(8vw, 9vh); /* Ensures scaling fits container */
+    }
+
+    /* Rotate RUNNING vertically */
+    .vertical-text {
+      transform: rotate(-90deg);
+      transform-origin: center;
+      font-size: min(8vw, 10vh); /* Adjusts to fit container */
+    }
+
+    /* PROPULSION (Prevents Overflow & Ensures Text Fits) */
+    .propulsion-text {
+      font-size: min(5vw, 6vh); /* Makes sure it doesn’t break */
+      width: 70%; /* Gives breathing room */
+    }
+
+    /* Make MEDIA & AI also fit dynamically */
+    .dynamic-text {
+      font-size: min(8vw, 8vh); /* Keeps it proportional to container size */
+    }
+
+    /* Custom Tailwind Grid */
+    .grid-container {
+      display: grid;
+      grid-template-columns: 0.8fr 0.8fr 1.5fr; /* MATHEMATICS is now less wide */
+      grid-template-rows: 75vh 50vh 90vh; /* Doubled height for last row */
+      gap: 8px; /* Keeps black gap between sections */
+      width: 100vw;
+      height: 100vh;
+      padding: 16px;
+    }
+
+    /* Custom placement for jagged effect */
+    .software, .mathematics, .propulsion, .ai, .art, .media, .running, .education {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden; /* Prevents text from going outside */
+    }
+
+    /* PROPULSION & AI STACKED PROPERLY (Keeping the Gap) */
+    .propulsion-ai-container { 
+      grid-column: 3 / 4; 
+      grid-row: 1 / 2; 
+      display: grid; 
+      grid-template-rows: 1fr 1fr; /* Ensures equal stacking */
+      gap: 8px; /* Creates the thin black gap */
+      position: relative;
+      height: 100%; /* Ensure it fills space */
+    }
+
+    /* Second Row (Half-Width & Taller) */
+    .art { grid-column: 1 / 3; grid-row: 2 / 3; height: 100%; }
+    .media { grid-column: 3 / 4; grid-row: 2 / 3; height: 100%; }
+
+    /* Third Row (Doubled Height, Running Rotated) */
+    .running { 
+      grid-column: 1 / 2; 
+      grid-row: 3 / 4; 
+      background-color: #222; 
+    }
+    .education { 
+      grid-column: 2 / 4; 
+      grid-row: 3 / 4; 
+      background-color: #444; 
     }
 
   </style>
@@ -94,33 +105,36 @@
 
     <!-- First Row -->
     <div class="bg-gray-800 software">
-      <span class="title software-text rotate-text">SOFTWARE</span>
+      <span class="title rotate-text">SOFTWARE</span>
     </div>
     <div class="bg-gray-700 mathematics">
-      <span class="title responsive-text rotate-text">MATHEMATICS</span>
+      <span class="title rotate-text">MATHEMATICS</span>
     </div>
 
-    <!-- PROPULSION & AI STACKED INSIDE FIRST ROW -->
+    <!-- PROPULSION & AI STACKED INSIDE FIRST ROW (WITH GAP) -->
     <div class="propulsion-ai-container">
       <div class="bg-gray-600 propulsion">
-        <span class="title responsive-text">PROPULSION</span>
+        <span class="title propulsion-text">PROPULSION</span> <!-- Fully responsive -->
       </div>
       <div class="bg-gray-500 ai">
-        <span class="title ai-text">AI</span>
+        <span class="title">AI</span>
       </div>
     </div>
 
     <!-- Second Row (Now Half-Width & Taller) -->
     <div class="bg-gray-400 art">
-      <span class="title responsive-text">ART</span>
+      <span class="title">ART</span>
     </div>
     <div class="bg-gray-300 media">
-      <span class="title responsive-text">MEDIA</span>
+      <span class="title dynamic-text">MEDIA</span>
     </div>
 
-    <!-- Third Row (Reduced Height) -->
-    <div class="bg-gray-900 education">
-      <span class="title responsive-text">EDUCATION</span>
+    <!-- Third Row (Doubled Height, Running Rotated) -->
+    <div class="running">
+      <span class="title vertical-text">RUNNING</span>
+    </div>
+    <div class="education">
+      <span class="title">EDUCATION</span>
     </div>
 
   </div>
